# sat-for-games

./: ChangeLog.md  Choice.html  Count.html  LightsOut.html  README.md  Select.html  TotalMap.html  Zhed.html  cabal.project  doc-index-124.html  doc-index-33.html  doc-index-36.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  (+12 more)
src/: Choice.hs  Choice.html  Count.hs  Count.html  Ersatz.Prelude.html  LightsOut.hs  LightsOut.html  Select.hs  Select.html  Template.hs  TotalMap.hs  TotalMap.html  Zhed.hs  Zhed.html
src/Ersatz/: Prelude.hs
