name:                sat-for-games
version:             0.1.0.0
-- synopsis:
-- description:
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
copyright:           2018 Eric Mertens
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       1.12

library
  exposed-modules:   LightsOut, Zhed,
                     Ersatz.Prelude,
                     Select, Choice, Count, TotalMap
  build-depends:     base         >=4.10  && <4.12,
                     ersatz       >=0.4.2 && <0.5,
                     containers   >=0.5   && <0.6,
                     transformers >=0.5   && <0.6
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite doctests
  type:              exitcode-stdio-1.0
  ghc-options:       -threaded
  main-is:           doctests.hs
  build-depends:     base, sat-for-games, doctest >=0.16 && <0.17
