name:                sat-for-games
version:             0.1.0.0
synopsis:            Introduction to using SAT to solve games
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@galois.com
copyright:           2018 Eric Mertens
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       1.12

description:
      Introduction to using SAT to solve games.
      .
      This package provides the "Ersatz.Prelude" module as a
      convenient way to import most of the things you'll need
      while using Ersatz.
      .
      The "LightsOut" module provides a simpler example of a
      game that we can solve using a SAT solver. This game only
      requires us to xor the right elements from a grid together.
      .
      The "Zhed" module provides a more complex example of a
      game that we can solve using a SAT solver. This game will
      take us through counting, symbolic choice from a map,
      and symbolic choice of normal, concrete Haskell values.
      .
      The "TotalMap" module provides a useful abstraction built
      on top of the standard "Data.Map" module. This will allow
      us to attach a default value to a map.
      .
      The "Select" module will allow us to make symbolic choices
      from a list of values. This will help us to avoid having
      to make many one-off 'Codec' and 'Variable' instances.
      .
      The "Choice" module will provide an abstraction for types
      that support symbolic choice between two alternatives.

library
  exposed-modules:   LightsOut, Zhed,
                     Ersatz.Prelude,
                     Select, Choice, Count, TotalMap

  build-depends:     base         >=4.10  && <4.12,
                     ersatz       >=0.4.2 && <0.5,
                     containers   >=0.5   && <0.6,
                     transformers >=0.5   && <0.6

  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite doctests
  type:              exitcode-stdio-1.0
  ghc-options:       -threaded
  main-is:           doctests.hs
  build-depends:     base, sat-for-games, doctest >=0.16 && <0.17
  default-language:  Haskell2010
